--- a/git/gitconfig.symlink.template
+++ b/git/gitconfig.symlink.template
@@ -1,11 +1,11 @@
 [user]
-  name = GIT_NAME
-  email = GIT_EMAIL
+	name = Alan Oliver
+	email = alan@vzaar.com
 [color]
   ui = auto
 [core]
-  excludesfile = ~/.gitignore
-  editor = subl -n -w
+	excludesfile = /Users/alan/.gitignore_global
+  editor = mvim -f
 [format]
   pretty = %C(yellow)%h%Creset %s %C(red)(%an, %cr)%Creset
 [branch]
@@ -17,9 +17,18 @@
 [diff]
   mnemonicprefix = true
   tool = diffmerge
+	algorithm = patience
 [difftool]
   prompt = false
 [difftool "diffmerge"]
   cmd = diffmerge $LOCAL $REMOTE
 [mergetool]
   keepBackup = false
+[difftool "sourcetree"]
+	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+	path = 
+[mergetool "sourcetree"]
+	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	trustExitCode = true
+[rerere]
+	enabled = true
